input semua sudah berjalan dengan baik, ini sebelum menyatukan dengan amanahs collection

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,12 @@ body {
 .navbar-brand{
     color: #ffffff;
 }
+.navbar-toggler{
+    background-color: #ffffff;
+}
+.navbar-toggler-icon{
+    border: solid 1px #257bd1;
+}
 
 button.nav-link.active{
     background-color: #e0afa0;
